--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -109,6 +109,10 @@
   padding: 0;
   height: 45px;
 
+  @include vp-1023 {
+    padding-top: 8px;
+  }
+
   @include vp-767 {
     max-width: none;
   }
