--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -53,6 +53,7 @@
 
   @include vp-767 {
     padding-right: 0;
+    width: 100%;
   }
 }
 
@@ -104,6 +105,11 @@
   @include vp-1023 {
     display: flex;
     flex-direction: column;
+    column-count: 1;
+  }
+
+  @include vp-767 {
+    width: 100%;
   }
 }
 
@@ -118,7 +124,9 @@
 .footer__list--contacts {
   margin-top: 20px;
   @include vp-767 {
+    margin-top: 0;
     display: none;
+    margin-top: -5px;
   }
 }
 
@@ -126,15 +134,30 @@
   display: block;
 }
 
+.footer__list--contacts  .footer__item:nth-child(1) {
+
+  @include vp-767 {
+    margin-bottom: 17px;
+  }
+}
+
 .footer__item {
   list-style-type: none;
   margin-bottom: 7px;
   max-width: 220px;
   width: 100%;
+
+  @include vp-767 {
+    line-height: 18px;
+  }
 }
 
 .footer__list--contacts .footer__item {
   min-width: 345px;
+
+  @include vp-767 {
+    min-width: 100%;
+  }
 }
 
 .footer__link {
@@ -156,6 +179,10 @@
     @include hover {
       color: $color-transparent-white;
     }
+  }
+
+  @include vp-767 {
+    font-size: 14px;
   }
 }
 
@@ -205,7 +232,7 @@
   @include vp-767 {
     margin-bottom: 0;
     padding-top: 0;
-    padding-bottom: 25px;
+    padding-bottom: 23px;
     display: block;
     width: 100%;
     cursor: pointer;
@@ -220,11 +247,6 @@
   margin-right: 25px;
 }
 
-.footer__list--acc {
-  @include vp-767 {
-    display: none;
-  }
-}
 
 .footer__logo-link {
   display: block;
